Github pages no longer support http
Update the d3 link from http to https

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ circle {
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v2.min.js?2.9.6"></script>
+<script src="https://d3js.org/d3.v2.min.js?2.9.6"></script>
 <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
 <script src="buckyball.js"></script>
 <script>
